# pmlens

./: .dockerignore  .gitignore  .mcpbignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.ja.md  README.md  manifest.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: pmlens-docker-dev.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-wrapper.yml  release.yml
docs/: MIGRATION.md  README.md  architecture.html  cheatsheet.ja.md  cheatsheet.md  design.md  memory-layer-design.md  memory-layer-prompt.md  user-guide.html  workflow-guide.html  workflow.md
docs/articles/: zenn-pm-server-intro.md
docs/issues/: DESIGN_desktop-outbox-two-way.md  ISSUE_desktop-outbox-one-way.md
docs/reports/: ja-fts-baseline.md
packaging/pm-server-wrapper/: README.md  pyproject.toml
packaging/pmlens-reservation/: LICENSE  README.md  pyproject.toml
packaging/pmlens-reservation/pmlens/: __init__.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/dev/: isolated-test.sh
plugin/hooks/: hooks.json  post-tool-use.sh  session-start.sh
plugin/skills/pm/: SKILL.md
scripts/: build_mcpb.py
skill/: SKILL.md
skill/docker-dev/: SKILL.md
skill/super-research/: SKILL.md
src/pm_server/: __init__.py  __main__.py  claudemd.py  dashboard.py  discovery.py  hooks.py  installer.py  memory.py  models.py  outbox.py  redaction.py  rules.py  server.py  storage.py  utils.py  workflow.py  x_draft_store.py
src/pm_server/templates/: dashboard_portfolio.html
src/pm_server/templates/workflows/: brainstorming.yaml  content-pipeline.yaml  development.yaml  discovery.yaml  super-research.yaml
src/pmlens/: __init__.py  __main__.py  auto_memory.py  claudemd.py  context.py  dashboard.py  hooks.py  installer.py  memory.py  models.py  outbox.py  prompt_pack.py  recall.py  redaction.py  rules.py  server.py  utils.py  velocity.py  workflow.py  x_draft_store.py
src/pmlens/templates/: dashboard_single.html  prompt_pack.html
src/pmlens/templates/workflows/: development.yaml  docker-dev.yaml
tests/: conftest.py  test_auto_memory.py  test_auto_memory_ingest.py  test_claudemd.py  test_concurrent.py  test_content_pipeline_template.py  test_context.py  test_dashboard.py  test_discovery.py  test_hooks.py  test_installer.py  test_knowledge.py  test_lens_invariant.py  test_lens_mode.py  test_manifest.py  test_memory.py  test_memory_ja_fts.py  test_memory_ops.py  test_migrate_to_pmlens.py  test_models.py  test_outbox.py  test_phase3_identity_flip.py  test_phase3_rename_guards.py  test_plugin.py  test_prompt_pack.py  test_recall.py  test_redaction.py  test_ro_surface_disjoint.py  test_rules.py  test_server.py  test_smoke.py  test_storage.py  test_utils.py  test_velocity.py  test_workflow.py  test_workflow_pins.py  test_x_content_golden.py  test_x_draft_store.py  test_x_drafts_gitignore.py  test_x_drafts_status.py  (+1 more)
