[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-server"
version = "0.5.1"
description = "Project management MCP Server for Claude Code — track tasks, visualize progress, manage decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shinichi Nakazato" }]
keywords = ["claude-code", "project-management", "mcp", "mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0,<4.0",
    "pydantic>=2.5",
    "pyyaml>=6.0.1",
    "click>=8.1",
    "jinja2>=3.1.3",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pm-server = "pm_server.__main__:cli"

[project.urls]
Homepage = "https://github.com/flc-design/pm-server"
Repository = "https://github.com/flc-design/pm-server"
Issues = "https://github.com/flc-design/pm-server/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
