[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-server"
version = "0.6.2"
description = "Project management MCP Server for Claude Code — track tasks, visualize progress, manage decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shinichi Nakazato" }]
keywords = ["claude-code", "project-management", "mcp", "mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.0,<4.0",
    "pydantic>=2.5",
    "pyyaml>=6.0.1",
    "click>=8.1",
    "jinja2>=3.1.5",
    "tomlkit>=0.13",
    "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pip-tools"]

[project.scripts]
pm-server = "pm_server.__main__:cli"

[project.urls]
Homepage = "https://github.com/flc-design/pm-server"
Repository = "https://github.com/flc-design/pm-server"
Issues = "https://github.com/flc-design/pm-server/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end CLI subprocess smoke tests (PMSERV-056). Included by default; run alone with `pytest -m smoke` or skip via `pytest -m \"not smoke\"`.",
]

[tool.coverage.run]
source = ["src/pm_server"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
