# Thin compatibility wrapper for the PM Server → PM Lens rename (Phase-2).
#
# The project is now distributed as `pmlens`. This `pm-server` distribution has
# NO code of its own — it is a metapackage that depends on `pmlens`, so existing
# `pip install pm-server` / `uvx pm-server` / plugin `pm-server@0.12.1` keep
# resolving. `pmlens` carries the actual module and the `pm-server` console
# script, so the wrapper must NOT declare a console_scripts entry (would collide).
#
# Version 0.12.1 matches pmlens/pyproject so the committed plugin pin
# `uvx pm-server@0.12.1` resolves to this wrapper. The last *real* pm-server build
# stays available as `pm-server==0.10.0`. See docs/MIGRATION.md / ADR-031 / ADR-032.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-server"
version = "0.12.1"
description = "Compatibility shim — PM Server is now PM Lens. Installs the 'pmlens' package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shinichi Nakazato" }]
maintainers = [{ name = "FLC design Co., Ltd." }]
dependencies = ["pmlens>=0.12.1"]
keywords = ["pm-server", "pmlens", "pm-lens", "compatibility-shim", "rename"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/flc-design/pmlens"
Repository = "https://github.com/flc-design/pmlens"
Issues = "https://github.com/flc-design/pmlens/issues"

[tool.setuptools]
# Metapackage: no Python modules of its own; pmlens provides everything.
packages = []
